home page update

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,3 +36,12 @@ input {
 p a {
   color: black;
 }
+
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  text-align: center;
+}
