--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,8 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.5.0/octicons.min.css">
+
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
 </head>
@@ -53,12 +55,14 @@
 </body>
 
 <footer>
-    <div class="center ">
+    <div class="center footer">
         <p id="bottomCSS ">
             AutoTag automatically post pictures to twitter and tags it according to Clarifai's api
         </p>
         <p>
-            Created By <a href="https://github.com/jasonCodeng ">Jason Deng</a>, <a href="https://github.com/cpanz ">Cheng Pan</a>, <a href="https://github.com/newtext ">Lizhou Cao</a>
+            Created By Jason Deng <a href="https://github.com/jasonCodeng"><span class="octicon octicon-mark-github"></span></a>,
+            Cheng Pan <a href="https://github.com/cpanz"><span class="octicon octicon-mark-github"></span></a>,
+            Lizhou Cao <a href="https://github.com/newtext"><span class="octicon octicon-mark-github"></span></a>
         </p>
     </div>
 </footer>
