--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,8 +28,15 @@
 
         <div id="container" ng-controller="HomeCtrl">
             <div class="center">
+
+                <div ng-hide="twitter_submitted" class="row">
+                    <div class="col-md-12">
+                        <button type="button" ng-click="oauth2('twitter')" class=" btn btn-default navbar-btn ">Verify With Twitter</button>
+                    </div>
+                </div>
+
                 <form class="rowDown" ng-submit="submitNumber()">
-                    <div ng-hide="phone_submitted" class="row">
+                    <div ng-hide="!linked" class="row">
                         <div class="input-field col-md-4 col-md-offset-4">
                             <input class="textLine" ng-model="phonenumber" id="tel" type="tel">
                             <label class="testForm" for="tel">Phone Number</label>
@@ -40,11 +47,6 @@
                     </div>
                 </form>
 
-                <div ng-hide="!linked" class="row">
-                    <div class="col-md-12">
-                        <button type="button" ng-click="oauth2('twitter')" class=" btn btn-default navbar-btn ">Verify With Twitter</button>
-                    </div>
-                </div>
                 <div ng-hide="!bothSubmitted">
                     <div>Your Twitter and phone number are now linked!</div>
                     <div>Text (917)242-4218 to auto tag your image and post it on Twitter!</div>
@@ -60,9 +62,8 @@
             AutoTag automatically post pictures to twitter and tags it according to Clarifai's api
         </p>
         <p>
-            Created By Jason Deng <a href="https://github.com/jasonCodeng"><span class="octicon octicon-mark-github"></span></a>,
-            Cheng Pan <a href="https://github.com/cpanz"><span class="octicon octicon-mark-github"></span></a>,
-            Lizhou Cao <a href="https://github.com/newtext"><span class="octicon octicon-mark-github"></span></a>
+            Created By Jason Deng <a href="https://github.com/jasonCodeng"><span class="octicon octicon-mark-github"></span></a>, Cheng Pan <a href="https://github.com/cpanz"><span class="octicon octicon-mark-github"></span></a>, Lizhou Cao
+            <a href="https://github.com/newtext"><span class="octicon octicon-mark-github"></span></a>
         </p>
     </div>
 </footer>
