--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,7 @@
                 </div>
             </form>
 
-            <div ng-hide="!bothSubmitted">
+            <div class="sizeR"ng-hide="!bothSubmitted">
                 <div>Your Twitter and phone number are now linked!</div>
                 <div>Text (917)242-4218 to auto tag your image and post it on Twitter!</div>
             </div>
@@ -58,8 +58,8 @@
 
 <footer>
     <div class="center footer">
-        <p id="bottomCSS ">
-            AutoTag automatically post pictures to twitter and tags it according to Clarifai's api
+        <p id="bottomCSS">
+            AutoTag post and tags photos to twitter by using API from Twilio and Clarifai
         </p>
         <p>
             Created By Jason Deng <a href="https://github.com/jasonCodeng"><span class="octicon octicon-mark-github"></span></a>, Cheng Pan <a href="https://github.com/cpanz"><span class="octicon octicon-mark-github"></span></a>, Lizhou Cao
